<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/linearlayout"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Username"
            android:textSize="20sp"
            android:id="@+id/etUsername" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Password"
            android:textSize="20sp"
            android:id="@+id/etPassword"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:id="@+id/btnLogin"
            android:text="login"
            android:textColor="@color/white"
            android:background="@drawable/roundbtn"/>

    </LinearLayout>

</LinearLayout>